# genie

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
desktop/: BUILD.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/main/: index.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: App.vue  styles.css
desktop/src/renderer/components/: Navbar.vue
desktop/src/renderer/views/: SceneDetailView.vue  SceneListView.vue  SettingsView.vue
desktop/tests/: app.test.ts
docs/: v2.0-scene-design.md
src/: api.ts  llm-service.ts  prompt-optimizer.ts  tauri-api.ts  template-engine.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/__tests__/: api.test.ts  components.test.ts  llm-service.test.ts  prompt-optimizer.test.ts  tauri-api.test.ts  template-engine.test.ts  types.test.ts
src/views/: SceneDetailView.vue  SceneListView.vue  SettingsView.vue
