[package]
name = "genie"
version = "1.0.0"
description = "Genie - AI Prompt Studio"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[package.metadata.tauri.bundle]
icon = []

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-devtools = { version = "2.0", optional = true }
tauri-plugin-fs = { version = "2.0", features = [] }

[features]
default = ["custom-protocol", "devtools"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["dep:tauri-plugin-devtools"]
