[package]
name = "genie"
version = "1.0.0"
description = "Genie - AI Prompt Studio"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[package.metadata.tauri.bundle]
icon = []

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["test"] }
tauri-plugin-devtools = { version = "2.0", optional = true }
tauri-plugin-fs = { version = "2.0", features = [] }
tauri-plugin-store = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["custom-protocol", "devtools"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["dep:tauri-plugin-devtools"]
